--- a/tex/Part2/DT.tex
+++ b/tex/Part2/DT.tex
@@ -1,18 +1,25 @@
-\chapter{Muon Drift Tube Luminosity}
+\chapter{Muon Drift Tube Luminometer}
 
-Overview , past experience, motivation
+- Overview \\
+- past experience \\
+- motivation
 
 \section{Detector Layout}
-Description of the DT system layout, trigger primitive objects
+- Description of the DT system layout \\
+- trigger primitive objects
 
-\section{Trigger Primitive Counting and Data Acquisition}
-DT backend, trigger primitive counting, and  data transfer
+\section{Muon Trigger Primitive Counting and Data Acquisition}
+- DT backend
+- trigger primitive counting
+- data transfer
 
 \section{Expected Performance}
-Rates, linearity, statistical precision
+- Rates
+- linearity
+- statistical precision
 
 \clearpage
-\newpage
+
 \begin{figure}[hbtp]
 \centering
 \begin{subfigure}
