--- a/briltdr.tex
+++ b/briltdr.tex
@@ -47,7 +47,7 @@ pdfkeywords={CMS, bril, Phase-2 upgrade}}
 
 \input{tex/BRIL_commands}
 \input{tex/title_page}
-%\input{tex/editors}
+\input{tex/editors}
 %\maketitle %maketitle comes after all the front information has been supplied
 % >> Text
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  Begin text %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
