--- a/tex/Part2/DT.tex
+++ b/tex/Part2/DT.tex
@@ -9,14 +9,14 @@
 - trigger primitive objects
 
 \section{Muon Trigger Primitive Counting and Data Acquisition}
-- DT backend
-- trigger primitive counting
+- DT backend \\
+- trigger primitive histogramming \\
 - data transfer
 
 \section{Expected Performance}
-- Rates
-- linearity
-- statistical precision
+- Rates \\ 
+- linearity \\
+- statistical precision 
 
 \clearpage
 
