--- a/tex/Part2/Outer_Tracker_Lumi.tex
+++ b/tex/Part2/Outer_Tracker_Lumi.tex
@@ -8,7 +8,7 @@
 
 \section{Track Stub Counting and Data Acquisition}
 - OT backend \\ 
-- track stub counting \\
+- track stub histogramming \\
 - data transfer 
 
 \section{Expected Performance}
