--- a/tex/editors.tex
+++ b/tex/editors.tex
@@ -1,10 +1,12 @@
-\section*{Editors}
-A.~Dabrowski, D.~Stickland, G.~Auzinger, P.~Lujan
+%\section*{Editors}
+%A.~Dabrowski, D.~Stickland, G.~Auzinger, P.~Lujan
  
 \section*{Chapter editors}
-G.~Auzinger, I.~Azhgirey,  A.~Dabrowski, A.~Lokhovitskiy,  S.~Mallows, A.~B.~Meyer,  G.~P\'asztor, A.~Pozdnyakov,  D.~Stickland,  Z.~Xie
+J. Benitez, C. Oropeza
+%G.~Auzinger, I.~Azhgirey,  A.~Dabrowski, A.~Lokhovitskiy,  S.~Mallows, A.~B.~Meyer,  G.~P\'asztor, A.~Pozdnyakov,  D.~Stickland,  Z.~Xie
 
 
   
-\vspace*{\fill}
-\cleardoublepage
+%\vspace*{\fill}
+%\cleardoublepage
+\clearpage
