--- a/briltdr.tex
+++ b/briltdr.tex
@@ -90,7 +90,7 @@ pdfkeywords={CMS, bril, Phase-2 upgrade}}
 %\input{tex/Part2/SAL2}
 \input{tex/Part2/Outer_Tracker_Lumi}
 %\input{tex/Part2/BRIL_Trigger}
-\input{tex/Part2/DT}
+%\input{tex/Part2/DT}
 %\input{tex/Part2/Scouting}
 %\input{tex/Part2/BHM}
 %\input{tex/Part2/RAMSES}
