--- a/tex/Part2/Outer_Tracker_Lumi.tex
+++ b/tex/Part2/Outer_Tracker_Lumi.tex
@@ -1,9 +1,15 @@
 \chapter{Outer Tracker Luminometer}
-- Overview \\
-- motivation
+
+The CMS Phase II Outer Tracker system will provide a source of high rate physics objects: L1 track stubs,
+due to its designed architecture which sends these objects to the L1 track reconstruction system at full 40 MHz frequency~\cite{CERN-LHCC-2017-009}.
+Studies of CMS Phase II simulations show excellent linearity in the counting of these objects up to pile-up of 200.
+Both of these properties make this an excellent candidate for a precision luminometer.
+In the following sections, the detector layout, a preliminary design of the data acquisition system, and expected perfomace are described.
+
 
 \section{Detector Layout }
 - Description of the Outer Tracker layout (Layer 6)\\
+
 - track stub objects
 
 \section{Track Stub Counting and Data Acquisition}
