--- a/briltdr2021.bib
+++ b/briltdr2021.bib
@@ -23,3 +23,13 @@
 ----  Do not escape the entire title as it will then clash with the journal style.
 ---- Journal names: the journals generally include the series in the journal name, "Physical Review D", vol 5, rather than PR D5
 ---- >>> Please use the --preview option with the tdr script to perform a simple-minded reference check before uploading. This requires python.
+
+
+@techreport{CERN-LHCC-2017-009,
+      title         = "{The Phase-2 Upgrade of the CMS Tracker}",
+      author = "{CMS Collaboration}",
+      number        = "CERN-LHCC-2017-009, CMS-TDR-014",
+      year          = "(2017)",
+      url           = "https://cds.cern.ch/record/2272264",
+}
+
