--- a/briltdr2021.bib
+++ b/briltdr2021.bib
@@ -33,3 +33,44 @@
       url           = "https://cds.cern.ch/record/2272264",
 }
 
+
+@techreport{CERN-LHCC-2017-012,
+      title         = "{The Phase-2 Upgrade of the CMS Muon Detectors}",
+      author = "{CMS Collaboration}",
+      number        = "CERN-LHCC-2017-012, CMS-TDR-016",
+      year          = "(2017)",
+      url           = "https://cds.cern.ch/record/2283189",
+}
+
+
+@article{MUO-16-001,
+    collaboration  = "CMS",
+    title = "{Performance of the {CMS} muon detector and muon reconstruction with proton-proton collisions at $\sqrt{s}=13$\,TeV}",
+    journal = "JINST",
+    doi = {10.1088/1748-0221/13/06/p06015},
+    year = 2018,
+    volume = {13},
+    pages = {P06015},
+    eprint         = "1804.04528",
+    archivePrefix  = "arXiv",
+    primaryClass   = "physics.ins-det",
+    reportNumber   = "CMS-MUO-16-001, CERN-EP-2018-058",
+    SLACcitation   = "%%CITATION = ARXIV:1804.04528;%%"
+}
+
+
+
+@techreport{LUM-17-001,
+      title         = "{CMS luminosity measurements for the 2016 data-taking period}",
+      author = "{CMS Collaboration}",
+      number        = "CMS PAS LUM-17-001",
+      year          = "(2017)",
+      url           = "https://cds.cern.ch/record/2257069",
+}
+@techreport{LUM-15-001,
+      title         = "{CMS luminosity measurement for the 2015 data-taking period}",
+      author = "{CMS Collaboration}",
+      number        = "CMS PAS LUM-15-001",
+      year          = "(2017)",
+      url           = "https://cds.cern.ch/record/2138682",
+}
