--- a/tex/Part2/DT.tex
+++ b/tex/Part2/DT.tex
@@ -4,11 +4,17 @@
 - past experience \\
 - motivation
 
-\section{Detector Layout}
+
+%%temporary citation to the 2016 luminosity PAS
+\cite{LUM-17-001}
+
+\section{Detector Layout and Trigger Primitives}
 - Description of the DT system layout \\
 - trigger primitive objects
 
-\section{Muon Trigger Primitive Counting and Data Acquisition}
+\cite{CERN-LHCC-2017-012}
+
+\section{Data Acquisition}
 - DT backend \\
 - trigger primitive histogramming \\
 - data transfer
@@ -18,6 +24,7 @@
 - linearity \\
 - statistical precision 
 
+
 \clearpage
 
 \begin{figure}[hbtp]
@@ -26,11 +33,14 @@
   \centering
   \includegraphics[width=.9\linewidth]{tex/Part2/fig/DT/DT-longitudinal.png}
 \end{subfigure}
-\begin{subfigure}
-  \centering
-  \includegraphics[width=.6\linewidth]{tex/Part2/fig/DT/DT-transverse.png}
-\end{subfigure}
-\caption{Geometrical layout of the CMS Muon barrel detector system showing the Drift Tube (DT) chambers longitudinal view (top) and transverse view (bottom). The numbering scheme for the chambers is shown in within the figure.}
+%\begin{subfigure}
+%  \centering
+%  \includegraphics[width=.6\linewidth]{tex/Part2/fig/DT/DT-transverse.png}
+%\end{subfigure}
+\caption{
+  Geometrical layout of the CMS Muon barrel detector system showing the Drift Tube (DT) chambers longitudinal view (top) and transverse view (bottom).
+  The numbering scheme for the chambers is shown in within the figure.
+}
 \label{fig:DT_layout}
 \end{figure}
 
