--- a/briltdr.tex
+++ b/briltdr.tex
@@ -88,9 +88,9 @@ pdfkeywords={CMS, bril, Phase-2 upgrade}}
 %\input{tex/Part2/D4R1}
 %\input{tex/Part2/SAL}
 %\input{tex/Part2/SAL2}
-\input{tex/Part2/Outer_Tracker_Lumi}
+%\input{tex/Part2/Outer_Tracker_Lumi}
 %\input{tex/Part2/BRIL_Trigger}
-%\input{tex/Part2/DT}
+\input{tex/Part2/DT}
 %\input{tex/Part2/Scouting}
 %\input{tex/Part2/BHM}
 %\input{tex/Part2/RAMSES}
